--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <div class="section-gradient">
         <div class="container">
           <div class="section">
-            <div class="section-left">
+            <div class="section-third">
               <div class="image-review gallery-item"></div>
               <div class="gallery-title" id="open-gallery">
                 <span>Gallery</span>
@@ -40,27 +40,31 @@
       <div class="section-gradient">
         <div class="container">
           <div class="section">
-            <div class="section-left">
-              <div class="section-title">
-                Products
+            <div class="section-half">
+              <div class="secondary-title">Products</div>
+
+              <div class="section-description">
+                Invest in Bitcoin, Ethereum, EOS, Dash, Bitcoin Cash, Binance DEX and 60+ blockchain based projects.
+                Store cryptocurrency safely and privately. Get full and exclusive control over your assets. Designed to
+                detail and built by gifted engineers.
               </div>
 
-              <div class="section-info">
-                <div class="section-subtitle">
-                  Unstoppable Wallet
+              <div class="card card-wallet">
+                <div class="card-icon">
+                  <img src="/assets/images/card/unstoppable-wallet.png" alt="Unstoppable Wallet"/>
                 </div>
-
-                <div class="section-description">
-                  Have exclusive control over what's yours. Store cryptocurrency safely and privately.<br><br>
-                  Invest in Bitcoin, Ethereum, EOS, Dash, Bitcoin Cash, Binance DEX and 60+ blockchain projects.<br><br>
-                  Non-custodial, decentralized, p2p, private, blockchain wallet.<br><br>
-                  Get it @ <a href="#">https://unstoppable.money</a>
+                <div class="card-info">
+                  <div class="card-title">Unstoppable Wallet</div>
+                  <div class="card-description">
+                    Be Free Be Untoppable. Non custodial crypto wallet which support most popular blockchains in one
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="section-right">
-              <img alt={{site.title}}
+              <img alt="Wallet"
+                   class="wallet-screenshot"
                    src="/assets/images/wallet/wallet.png"
                    srcset="
                       /assets/images/wallet/wallet@2x.png 2x,
@@ -72,34 +76,141 @@
 
       <div class="section-gradient">
         <div class="container">
-          <div class="section">
-            <div class="section-left">
-              <div class="section-title">
-                Guides
-              </div>
+          <div class="section-colum">
+            <div class="secondary-title">Guides</div>
 
-              <div class="section-info">
-                <div class="section-subtitle">
-                  Crypto in Simple Terms
+            <div class="section-description">
+              Understand how Bitcoin, Ethereum, EOS, Libra, Binance DEX, Telegram Open Network and other blokchains work.
+              We explain these projects in simple terms helping you onboard these new decentralized economoies as a pioneer.
+            </div>
+
+            <div class="guides">
+              <div class="guide">
+                <div class="card">
+                  <div class="card-icon">
+                    <img src="/assets/images/card/in-simple-term.png" alt="Bitcoin Explaining in Simple Terms"/>
+                  </div>
+                  <div class="card-info">
+                    <div class="card-title">Bitcoin Explaining in Simple Terms</div>
+                    <div class="card-description">
+                      Let’s begin by learning a little about bitcoin’s basic principles knowladge education documental
+                      guide some word for filling third line
+                    </div>
+                  </div>
                 </div>
-
-                <div class="section-description">
-                  <br><br>
-                  Understand how Bitcoin, Ethereum, EOS, Libra, Binance DEX, Telegram Open Network and other blokchains work. 
-                  <br><br>
-                  We explain these projects in simple terms helping you onboard these new decentralized economoies as a pioneer.<br><br>
-
-                  @ <a href="#">/guides.md</a>
+              </div>
+              <div class="guide">
+                <div class="card">
+                  <div class="card-icon">
+                    <img src="/assets/images/card/libra.png" alt="What is Libra"/>
+                  </div>
+                  <div class="card-info">
+                    <div class="card-title">What is Libra</div>
+                    <div class="card-description">
+                      Let’s begin by learning a little about bitcoin’s basic principles knowladge education documental
+                      guide some word for filling third line
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="guide">
+                <div class="card">
+                  <div class="card-icon">
+                    <img src="/assets/images/card/ethereum.png" alt="Ethereum"/>
+                  </div>
+                  <div class="card-info">
+                    <div class="card-title">Ethereum</div>
+                    <div class="card-description">
+                      Let’s begin by learning a little about bitcoin’s basic principles knowladge education documental
+                      guide some word for filling third line
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
 
-            <div class="section-right">
-              <img alt={{site.title}}
-                   src="/assets/images/guides/guides.png"
-                   srcset="
-                      /assets/images/guides/guides@2x.png 2x,
-                      /assets/images/guides/guides@3x.png 3x"/>
+            <div class="form-wrap">
+              <div class="form-title">Get this ebook!</div>
+              <form>
+                <div class="form-group">
+                  <input type="text" id="inputName" placeholder="Name">
+                </div>
+                <div class="form-group">
+                  <input type="email" id="inputEmail" placeholder="Email">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="section-gradient">
+        <div class="container">
+          <div class="section-colum">
+            <div class="secondary-title">Codes</div>
+
+            <div class="section-description">
+              Invest in Bitcoin, Ethereum, EOS, Dash, Bitcoin Cash, Binance DEX and 60+ blockchain based projects. Store
+              cryptocurrency safely and privately. Get full and exclusive control over your assets. Designed to detail
+              and built by gifted engineers.
+            </div>
+
+            <div class="guides">
+              <div class="guide">
+                <div class="card">
+                  <div class="card-icon"><img src="/assets/images/codes/btc.png" alt="Bitcoin Kit"/></div>
+                  <div class="card-info">
+                    <div class="card-title">Bitcoin Kit</div>
+                    <div class="card-description">iOS /  Android</div>
+                  </div>
+                </div>
+              </div>
+              <div class="guide">
+                <div class="card">
+                  <div class="card-icon"><img src="/assets/images/codes/eth.png" alt="Ethereum Kit"/></div>
+                  <div class="card-info">
+                    <div class="card-title">Ethereum Kit</div>
+                    <div class="card-description">iOS /  Android</div>
+                  </div>
+                </div>
+              </div>
+              <div class="guide">
+                <div class="card">
+                  <div class="card-icon"><img src="/assets/images/codes/eos.png" alt="EOS Kit"/></div>
+                  <div class="card-info">
+                    <div class="card-title">EOS Kit</div>
+                    <div class="card-description">iOS /  Android</div>
+                  </div>
+                </div>
+              </div>
+              <div class="guide">
+                <div class="card">
+                  <div class="card-icon"><img src="/assets/images/codes/binance.png" alt="Binance Chain Kit"/></div>
+                  <div class="card-info">
+                    <div class="card-title">Binance Chain Kit</div>
+                    <div class="card-description">iOS /  Android</div>
+                  </div>
+                </div>
+              </div>
+              <div class="guide">
+                <div class="card">
+                  <div class="card-icon"><img src="/assets/images/codes/swap.png" alt="Atomic Swap"/></div>
+                  <div class="card-info">
+                    <div class="card-title">Atomic Swap</div>
+                    <div class="card-description">iOS /  Android</div>
+                  </div>
+                </div>
+              </div>
+              <div class="guide">
+                <div class="card">
+                  <div class="card-icon"><img src="/assets/images/codes/lightning.png" alt="Lightning Kit"/></div>
+                  <div class="card-info">
+                    <div class="card-title">Lightning Kit</div>
+                    <div class="card-description">Soon</div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -108,19 +219,13 @@
       <div class="section-gradient">
         <div class="container">
           <div class="section">
-            <div class="section-left">
-              <div class="section-title">Meet</div>
-              <div class="section-avatar"></div>
+            <div class="section-third">
+              <div class="user-avatar"></div>
 
-              <div class="section-info">
-                <div id="member-name" class="section-subtitle">
-                  Raphael
-                </div>
-
-                <div id="member-info" class="section-description">
-                  Nickname Raph, is a fictional character and one of the four main characters of the Teenage Mutant
-                  Ninja Turtles comics and all related media.
-                </div>
+              <div class="secondary-title user-name">Team</div>
+              <div class="section-description">
+                Nickname Raph, is a fictional character and one of the four main characters of the Teenage Mutant Ninja
+                Turtles comics and all related media.
               </div>
             </div>
 
@@ -128,7 +233,7 @@
               <ul class="team-members">
                 <li><img class="team-member" alt="Arslan" src="/assets/images/team/Arslan.png"/></li>
                 <li><img class="team-member" alt="Nurkaly" src="/assets/images/team/Nurkaly.png"/></li>
-                <li><img class="team-member selected" alt="Rafael" src="/assets/images/team/Rafael.png"/></li>
+                <li><img class="team-member" alt="Rafael" src="/assets/images/team/Rafael.png"/></li>
                 <li><img class="team-member" alt="Kerim" src="/assets/images/team/kerim.png"/></li>
                 <li><img class="team-member" alt="Aibek" src="/assets/images/team/Aibek.png"/></li>
                 <li><img class="team-member" alt="Bakyt" src="/assets/images/team/Bakyt.png"/></li>
