--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -13,5 +13,7 @@ $white:       #ffffff !default;
 $light:       #F5F5F5 !default;
 $gray-light:  #C8C7CC !default;
 $dark:        #13151A !default;
+$black:       #262830 !default;
 $blue:        #0d6efd !default;
+$grey:        #808085 !default;
 $remus:       #13D670 !default;
