--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,7 @@
 @import "header";
 @import "gallery";
 @import "card";
+@import "subscribe-form";
 
 body {
   padding: 0;
@@ -45,7 +46,7 @@ body {
   background: linear-gradient(180deg, #1F2129 0%, #13151A 100%);
 }
 
-.section, .section-colum {
+.section, .section-column {
   padding: 80px 0;
   display: flex;
   position: relative;
@@ -61,7 +62,7 @@ body {
   }
 }
 
-.section-colum {
+.section-column {
   flex-direction: column;
 }
 
@@ -163,47 +164,6 @@ body {
     flex-grow: 1;
     max-width: 50%;
     min-width: 45%;
-  }
-}
-
-.form-wrap {
-  padding: 50px 0;
-  background: linear-gradient(180deg, #1F2129 0%, $dark 100%);
-  border-radius: 16px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  form {
-    width: 420px;
-  }
-
-  .form-title {
-    padding-bottom: 32px;
-    font-weight: 800;
-    font-size: 36px;
-    color: $light;
-  }
-
-  input {
-    width: 100%;
-    height: 60px;
-    padding: 15px;
-    margin-bottom: 16px;
-
-    border: 1px solid rgba(115, 121, 140, 0.2);
-    background: rgba(115, 121, 140, 0.2);
-    border-radius: 8px;
-    color: white;
-  }
-
-  button {
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%), $remus;
-    border-radius: 8px;
-    padding: 15px;
-    width: 100%;
-    color: #212529;
-    cursor: pointer;
   }
 }
 
