Preview Bitcoin Explaining in Simple Terms

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,23 +9,10 @@
       </a>
 
       <div class="nav">
-        <div class="nav-item"><a href="https://unstoppable.money">Home</a></div>
+        <div class="nav-item"><a href="/">Home</a></div>
         <div class="nav-item">Contact</div>
         <div class="nav-item"><a href="https://github.com/horizontalsystems" target="_blank">GitHub</a></div>
         <div class="nav-item"><a href="/privacy.md" target="_blank">Privacy</a></div>
-      </div>
-    </div>
-
-    <div class="banner">
-      <img src="/assets/images/horse.gif" alt="Binary horse" class="horse"/>
-
-      <div class="main-title">
-        Unstoppable Code
-      </div>
-
-      <div class="section-description">
-        Horizontal Systems build serverless applications around the idea of private wealth and privacy. Your door to
-        Bitcoin, Ethereum, all other crypto assets.
       </div>
     </div>
   </div>
