--- a/_includes/subscribe-form.html
+++ b/_includes/subscribe-form.html
@@ -22,7 +22,7 @@
             <label class="checkbox">
               <input type="checkbox">
               <div class="label-description">
-                By signing up, you agree to <a href="/privacy-policy">Privacy Policy</a>
+                By signing up, you agree to Horizontal System's <a href="/privacy-policy">Privacy Policy</a>
               </div>
             </label>
           </div>
