--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -32,8 +32,8 @@ body {
 
   @include sm {
     max-width: $screen-sm;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
@@ -137,7 +137,7 @@ body {
   }
 
   @include sm {
-    font-size: 15px;
+    font-size: 25px;
   }
 }
 
@@ -165,6 +165,84 @@ body {
     max-width: 50%;
     min-width: 45%;
   }
+
+  a:hover {
+    text-decoration: none;
+  }
+
+  @include md {
+    flex-direction: column;
+
+    .guide {
+      max-width: 100%;
+    }
+  }
+}
+
+.guides-viewer {
+  display: flex;
+
+  .guide-view {
+    padding-right: 80px;
+    flex-grow: 1;
+    align-self: center;
+  }
+
+  .guide-thumbs {
+    flex-grow: 2;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .guide-thumb {
+    cursor: pointer;
+
+    img {
+      border: 3px solid transparent;
+    }
+
+    &.current > img {
+      border: 3px solid #13D670;
+    }
+  }
+
+  @include md {
+    flex-direction: column;
+
+    .guide-view {
+      padding-right: 0;
+      align-self: center;
+      padding-bottom: 20px;
+    }
+  }
+
+  @include sm {
+    flex-direction: column;
+
+    .guide-view {
+      padding-right: 0;
+      padding-bottom: 20px;
+
+      img {
+        max-width: 100%;
+      }
+    }
+
+    .guide-thumb {
+      width: 50%;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.author-info {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
 }
 
 // Team
@@ -173,7 +251,10 @@ body {
   width: 200px;
   height: 200px;
   margin-bottom: 80px;
-  background-image: url("/assets/images/hs.png");
+
+  @include sm {
+    align-self: center;
+  }
 }
 
 .user-name {
