Design footer menu

--- a/_layouts/in-simple-terms.html
+++ b/_layouts/in-simple-terms.html
@@ -20,7 +20,7 @@
                 <div class="guide-thumb" datasrc="3"><img src="/assets/images/btc-in-simple-term/3-thumb.png" alt=""/></div>
                 <div class="guide-thumb" datasrc="4"><img src="/assets/images/btc-in-simple-term/4-thumb.png" alt=""/></div>
                 <div class="guide-thumb" datasrc="5"><img src="/assets/images/btc-in-simple-term/5-thumb.png" alt=""/></div>
-                <div class="guide-thumb" datasrc="6"><img src="/assets/images/btc-in-simple-term/6-thumb.png" alt=""/></div>
+                <div class="guide-thumb current" datasrc="6"><img src="/assets/images/btc-in-simple-term/6-thumb.png" alt=""/></div>
               </div>
             </div>
           </div>
@@ -77,5 +77,7 @@
         </div>
       </div>
     </main>
+
+    {% include footer.html %}
   </body>
 </html>
