Show privacy page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
         <div class="nav-item"><a href="/">Home</a></div>
         <div class="nav-item">Contact</div>
         <div class="nav-item"><a href="https://github.com/horizontalsystems" target="_blank">GitHub</a></div>
-        <div class="nav-item"><a href="/privacy.md" target="_blank">Privacy</a></div>
+        <div class="nav-item"><a href="/privacy">Privacy</a></div>
       </div>
     </div>
   </div>
