correct some text

--- a/_includes/subscribe-form.html
+++ b/_includes/subscribe-form.html
@@ -22,14 +22,14 @@
             <label class="checkbox">
               <input type="checkbox">
               <div class="label-description">
-                By signing up, you agree to Horizontal System's <a href="/privacy-policy">Privacy Policy</a>
+                By signing up, you agree to Horizontal System's <a href="/privacy">Privacy Policy</a>
               </div>
             </label>
           </div>
 
           <input type="hidden" name="ml-submit" value="1">
           <div class="ml-form-embedSubmit">
-            <button type="submit" class="primary">Download guide</button>
+            <button type="submit" class="primary">Download Guide</button>
             <button disabled="disabled" style="display: none;" type="button" class="loading">
               <div class="ml-form-embedSubmitLoad"></div>
             </button>
@@ -39,7 +39,7 @@
       <div class="ml-form-successBody row-success" style="display: none">
         <div class="ml-form-successContent">
           <h4>Thank you!</h4>
-          <p>Please check your inbox for our welcome email</p>
+          <p>Please check your email for the download link</p>
         </div>
       </div>
     </div>
