--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,7 @@
             </div>
 
             <div class="section-description">
-              Horizontal Systems build serverless applications around the idea of private wealth and privacy.
-              Your door to Bitcoin, Ethereum, all other crypto assets.
+              Horizontal Systems builds serverless applications around the idea of private wealth and privacy.
             </div>
           </div>
         </div>
@@ -48,9 +47,7 @@
               <div class="secondary-title">Products</div>
 
               <div class="section-description">
-                Invest in Bitcoin, Ethereum, EOS, Dash, Bitcoin Cash, Binance DEX and 60+ blockchain based projects.
-                Store cryptocurrency safely and privately. Get full and exclusive control over your assets. Designed to
-                detail and built by gifted engineers.
+                Decentralized Applications
               </div>
 
               <div class="card card-wallet">
@@ -60,7 +57,7 @@
                 <div class="card-info">
                   <div class="card-title">Unstoppable Wallet</div>
                   <div class="card-description">
-                    Be Free Be Untoppable. Non custodial crypto wallet which support most popular blockchains in one
+                    Invest in Bitcoin, Ethereum, EOS, Dash, Bitcoin Cash, Binance DEX and 60+ blockchain based projects. Non-custodial, p2p, private, decentralized crypto wallet app. Be Free Be Unstoppable.
                   </div>
                 </div>
               </div>
@@ -84,8 +81,7 @@
             <div class="secondary-title">Guides</div>
 
             <div class="section-description">
-              Understand how Bitcoin, Ethereum, EOS, Libra, Binance DEX, Telegram Open Network and other blokchains work.
-              We explain these projects in simple terms helping you onboard these new decentralized economoies as a pioneer.
+              Understand how Bitcoin, Ethereum, EOS, Libra and other major blockchains work. We explain these projects in simple terms helping you onboard these decentralized economies as a pioneer.
             </div>
 
             <div class="guides">
@@ -96,10 +92,9 @@
                       <img src="/assets/images/card/in-simple-term.png" alt="Bitcoin Explaining in Simple Terms"/>
                     </div>
                     <div class="card-info">
-                      <div class="card-title">Bitcoin Explaining in Simple Terms</div>
+                      <div class="card-title">Bitcoin Explained in Simple Terms</div>
                       <div class="card-description">
-                        Let’s begin by learning a little about bitcoin’s basic principles knowladge education documental
-                        guide some word for filling third line
+                        What is Bitcoin? What makes it so unique? How does it work? Why should you care? And why you should invest now?
                       </div>
                     </div>
                   </div>
@@ -113,8 +108,7 @@
                   <div class="card-info">
                     <div class="card-title">What is Libra</div>
                     <div class="card-description">
-                      Let’s begin by learning a little about bitcoin’s basic principles knowladge education documental
-                      guide some word for filling third line
+                        What Libra project is? Why it's being built? is it likely to succeed? What it means for people, crypto and traditional financial services?
                     </div>
                   </div>
                 </div>
@@ -127,8 +121,7 @@
                   <div class="card-info">
                     <div class="card-title">Ethereum</div>
                     <div class="card-description">
-                      Let’s begin by learning a little about bitcoin’s basic principles knowladge education documental
-                      guide some word for filling third line
+                      coming soon ...
                     </div>
                   </div>
                 </div>
