more text corrections

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class="section-description">
-              Horizontal Systems builds serverless applications around the idea of private wealth and privacy.
+              Enforcing your rights to private wealth and privacy.
             </div>
           </div>
         </div>
@@ -44,10 +44,10 @@
         <div class="container">
           <div class="section">
             <div class="section-half">
-              <div class="secondary-title">Products</div>
+              <div class="secondary-title">Decentralized Apps</div>
 
               <div class="section-description">
-                Decentralized Applications
+                
               </div>
 
               <div class="card card-wallet">
@@ -57,7 +57,7 @@
                 <div class="card-info">
                   <div class="card-title">Unstoppable Wallet</div>
                   <div class="card-description">
-                    Invest in Bitcoin, Ethereum, EOS, Dash, Bitcoin Cash, Binance DEX and 60+ blockchain based projects. Non-custodial, p2p, private, decentralized crypto wallet app. Be Free Be Unstoppable.
+                    Invest in Bitcoin, Ethereum, EOS, Binance DEX and 60+ projects. Non-custodial, p2p, private, decentralized crypto wallet app.
                   </div>
                 </div>
               </div>
@@ -94,7 +94,7 @@
                     <div class="card-info">
                       <div class="card-title">Bitcoin Explained in Simple Terms</div>
                       <div class="card-description">
-                        What is Bitcoin? What makes it so unique? How does it work? Why should you care? And why you should invest now?
+                        What is Bitcoin? What makes it unique? How it works? Why should you care? And why to invest now?
                       </div>
                     </div>
                   </div>
@@ -108,7 +108,7 @@
                   <div class="card-info">
                     <div class="card-title">What is Libra</div>
                     <div class="card-description">
-                        What Libra project is? Why it's being built? is it likely to succeed? What it means for people, crypto and traditional financial services?
+                        What is Libra project? Why it's being built? What it means for people, crypto and traditional financial services?
                     </div>
                   </div>
                 </div>
