add text to CODE section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <div class="container">
           <div class="section">
             <div class="section-half">
-              <div class="secondary-title">Decentralized Apps</div>
+              <div class="secondary-title">Apps We Built</div>
 
               <div class="section-description">
                 
@@ -78,10 +78,10 @@
       <div class="section-gradient">
         <div class="container">
           <div class="section-column">
-            <div class="secondary-title">Guides</div>
+            <div class="secondary-title">Guides Published</div>
 
             <div class="section-description">
-              Understand how Bitcoin, Ethereum, EOS, Libra and other major blockchains work. We explain these projects in simple terms helping you onboard these decentralized economies as a pioneer.
+              Understand how Bitcoin, Ethereum, EOS, Libra and other major blockchains work. We explain these projects in simple terms helping investors to onboard these decentralized economies as a pioneer.
             </div>
 
             <div class="guides">
@@ -138,12 +138,10 @@
       <div class="section-gradient">
         <div class="container">
           <div class="section-column">
-            <div class="secondary-title">Codes</div>
+            <div class="secondary-title">Code Released</div>
 
             <div class="section-description">
-              Invest in Bitcoin, Ethereum, EOS, Dash, Bitcoin Cash, Binance DEX and 60+ blockchain based projects. Store
-              cryptocurrency safely and privately. Get full and exclusive control over your assets. Designed to detail
-              and built by gifted engineers.
+              We believe good ideas should be Unstoppable. As we sail through uncharted waters of building decentralized services we keep 100% of our work public and open source. Use our libraries to design autonomous systems that can't go offline.
             </div>
 
             <div class="guides">
